<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_scanner"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <me.dm7.barcodescanner.zxing.ZXingScannerView
                android:id="@+id/z_xing_scanner"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="top|end" />


            <ImageButton
                android:id="@+id/ib_fullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/image_button_black"
                android:contentDescription="@string/fullscreen_mode"
                android:onClick="openFullscreen"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_fullscreen_white_24dp"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/ib_flashlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="57dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/image_button_black"
                android:contentDescription="@string/turn_on_flash"
                android:onClick="flashLight"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_flashlight_off_white_24dp"
                android:tint="@android:color/white" />

            <ImageButton
                android:id="@+id/ib_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/image_button_black"
                android:contentDescription="@string/lock_code_reader"
                android:onClick="lockUnlock"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_lock_open_white_24dp"
                android:tint="@android:color/white" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_scanner"
            android:background="@color/backgroundLightGrey"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/info"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_info_outline_black_18dp"
                android:tint="@color/tintIconGrey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/info_description"
                android:textColor="@color/tintIconGrey"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ll_info"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/last_content_read" />

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/tv_label"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/ib_clear"
                    android:layout_toStartOf="@+id/ib_clear"
                    android:background="@drawable/text_view_content_border"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/nothing_read" />

                <TextView
                    android:id="@+id/tv_bar_code_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_content"
                    android:layout_alignStart="@+id/tv_content"
                    android:layout_below="@+id/tv_content"
                    android:text="@string/barcode_format"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/ib_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/tv_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/image_button_delete"
                    android:contentDescription="@string/clear_content_read"
                    android:onClick="clearContent"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_delete_black_24dp"
                    android:tint="@android:color/white" />
            </RelativeLayout>

            <Button
                android:id="@+id/bt_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/open_url"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>